Adding test for all type off question
Adding test for all type off question